--- a/java/templates/java.yml
+++ b/java/templates/java.yml
@@ -1,19 +1,19 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: java-deployment
+  name: {{.Values.metadataName}}
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: java
+      app: {{.Values.labelName}}
   template:
     metadata:
       labels:
-        app: java
+        app: {{.Values.labelName}}
     spec:
       containers:
-      - name: javacontainer
-        image: project2team4/java:latest
+      - name: {{.Values.containerName}}
+        image: {{.Values.imageName}}
         ports:
-        - containerPort: 8080
+        - containerPort: {{.Values.service.port}}
